[tool.poetry]
name = "job-coverletter-gen"
version = "0.1.0"
description = "A job cover letter generator using the context from the given CV in pdf format."
authors = ["Sukumar"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.12.5"
langchain-chroma = "^0.1.4"
llama-index-embeddings-ollama = "^0.5.0"
jupyter = "^1.1.1"
pymupdf4llm = "^0.0.17"
llama-index-vector-stores-chroma = "^0.4.1"
llama-index-embeddings-langchain = "^0.3.0"
llama-index-llms-llama-cpp = "^0.3.0"
langchain = "^0.3.11"
langchain-community = "^0.3.11"
langchain-ollama = "^0.2.1"
llama-index-llms-langchain = "^0.5.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.10.0"}
isort = "^5.13.2"
jupyter-contrib-nbextensions = "^0.7.0"
nbdime = "^4.0.2"
jupyter-nbextensions-configurator = "^0.6.4"
jupytext = "^1.16.5"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"