[project]
name = "job-coverletter-gen"
version = "0.1.0"
description = "A job cover letter generator using the context from the given CV in pdf format."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.5.23",
    "gradio>=5.13.1",
    "ipykernel>=6.29.5",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.15",
    "langchain-groq>=0.2.3",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.2",
    "pymupdf>=1.25.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "nbdime>=4.0.2",
]
